# pyfgsea

./: .gitignore  Cargo.toml  Makefile  README.md  dev_check.ps1  install_fix.ps1  pyproject.toml  verify_release.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bioinfor0208/moban/: PyFgsea_Bioinformatics_revised.tex  oup-authoring-template.cls  references.bib
bioinfor0208/revision/: README.md  build.ps1  generate_revision_assets.py  main_revised.tex  response_to_reviewers.tex  supplementary_revised.tex
bioinfor0208/revision/data/: figure1_agreement_metrics.csv  figure1_agreement_values.csv  figure2_marker_profiles.csv  figure2_pathway_profiles.csv  figure_S10_equivalence_points.csv  figure_S12_reproducibility.csv  figure_S14_boundary_audit.csv  figure_S14_boundary_metrics.csv  (+15 more)
examples/: trajectory_demo.py
pyfgsea/: __init__.py  api.py  plotting_utils.py  trajectory.py  wrapper.py
pyfgsea/anchors/: select.py  switch.py
pyfgsea/cli/: main.py
pyfgsea/gsea/: runner.py  smooth.py
pyfgsea/io/: anndata_io.py  meta_merge.py
pyfgsea/plotting/: __init__.py  fastproof.py  overview.py
pyfgsea/preprocess/: pseudotime.py
pyfgsea/robustness/: bootstrap.py  null.py  scan.py
pyfgsea/windows/: binning.py
repro/: README.md  ablation_root_cause.py  benchmark_calibration.py  benchmark_threads.py  data_utils.py  fig1_table1_performance.py  fig_ablation_tail.py  fig_stability.py  fig_supp_bland_altman.py  fig_supp_myeloid_traj.py  fig_supp_null_calibration.py  fig_supp_tail_consistency.py  fig_supp_thread_scaling.py  fig_supp_window_sensitivity.py  run_one_thread_case.py
repro/data/: toy_trajectory.h5ad
results/: table1_formatted.csv  tail_summary.csv
scripts/: print_versions.py
src/: lib.rs
(+6 files in other folders)
